--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>rect站</title>
+	<link rel="icon" href="img/logo.png"/>
+	<style type="text/css">
+		body{
+			background-image: url('img/bg.jpg');
+			background-repeat: round;
+		}
+	</style>
 </head>
-<body background="img/bg.jpg">
+<body >
 	<div id="menu" style="background-radius:10px;">
 		<table style="background-color=#202020" width="100%" height=100%><tr ><td><img src="img/rectos.png" width="64" height="64"></td></tr>
-			<tr><td><br><br><br><br><br><br><br><br><br><center><h1>Rect Studiu</h1><br><a href="https://jq.qq.com/?_wv=1027&k=S5cMM4kU" style="background-color:#202020;">加入我们</a></center><br><br><br><br><br><br><br><br><br></td></tr></table>
+			<tr><td><br><br><br><br><br><br><br><br><br><center><font size="256">Rect Studiu</font><br><a href="https://jq.qq.com/?_wv=1027&k=S5cMM4kU" style="background-color:#202020;">加入我们</a></center><br><br><br><br><br><br><br><br><br></td></tr></table>
 	</div>
 	<br>
 	<br>
@@ -53,9 +60,24 @@
 </div>
 </div>
 
+<br><br><br><br><br><br><br><br><br><br><br><br>
+<div id="Download" style="background-color:#202020">
+	<header ><font size="32">我们的作品</font></header>
+	<hr>
+	<ul>
+		<li>史上最强AI（小玩具）<a href="https://cloud.189.cn/web/share?code=Un6Fruz2MrMb">下载（访问码：yzn8）</a></li>
+	</ul>
+</div>
 
 
-</table>
+
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+
+
+
+
+
 
 </body>
 </html>
