--- a/index.html
+++ b/index.html
@@ -6,73 +6,78 @@
 	<title>rect站</title>
 	<link rel="icon" href="img/logo.png"/>
 	<style type="text/css">
-		body{
-			background-image: url('img/bg.jpg');
-			background-repeat: round;
+		.manu{
+			height: 40px;
+			width: 100%;
+			background-color: #202020;
+			background-radius:50px ;			
+			
+		}
+		*{
+			margin: 0;
+			padding: 0;
+			text-decoration: none;
+			list-style: none;
+		}
+		.libt{
+			float: left;
+
+			width: 140px;
+			height: 40px;
+			font-size: 25px;
+			text-color: #eee;
+
+		}
+		.button{
+			height: 200px;
+			width: 20px;
+			background-color: #181818;
+			background-radius: 50px;
+			text-decoration-color: #ffffff;
+		}
+		.cc{
+			width: 100%;
+			text-decoration-color: #ffffff;
+			background-color: #141414;
+			background-radius:10px ;
+			text-align:center;
+			
+			justify-content: center;
+		}
+		.card{
+			
+			
+			background-repeat: no-repeat;
+			background-color: #151918;
+			background-repeat: space;
+
 		}
 	</style>
 </head>
-<body >
-	<div id="menu" style="background-radius:10px;">
-		<table style="background-color=#202020" width="100%" height=100%><tr ><td><img src="img/rectos.png" width="64" height="64"></td></tr>
-			<tr><td><br><br><br><br><br><br><br><br><br><center><font size="256">Rect Studiu</font><br><a href="https://jq.qq.com/?_wv=1027&k=S5cMM4kU" style="background-color:#202020;">加入我们</a></center><br><br><br><br><br><br><br><br><br></td></tr></table>
-	</div>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-
-		<div id="guide1" width=100% style="float: center;background-color: #141414;" >
-			<br><br><br>
-	<div  style="float: left;" width=100%  >
-		
-		<table width=15%  height=100% bgcolor="#303030" style="border-radius: 50px;text-decoration-color: #00FF00;-color">
-
-
-			<tr><td style="text-align:center;font-size:50px;text-decoration-color: #00FF00;"><center>介绍</center></td></tr>
-			<tr><td><img src="img/badqueen.jpg" alt="狗站长的美照" style="border-radius: 5100px;text-align:center;"></td></tr>
-			<tr>
-				<td style="text-align:center;font-size:30px;">狗站长</td>
-			</tr>
-			<tr><td>r站站长，网名badqueen，最喜欢交结天下豪杰,然后写了这个网站<br><br><br>更新内容如下：你特么去s罢<br><br><br></td>
-			</tr>
+<body bgcolor="#101010">
+	<div class="manu"><ul class="ullist"><li class="libt"><a href="index.html"><img src="img/logo.png" width="40" height="40"></a></li><li class="libt"><a href="#">项目</a></li><li class="libt"><a href="https://jq.qq.com/?_wv=1027&k=fZUjrDKU">加入交流群</a></li><li class="libt" style="float: right;"><a href="login.html">登录/注册</a></li></ul></div>
+	
+	<center><div class="cc" style="margin: 10;">
+		<center><font size="7" color="#fefefe" >鸣谢列表</font></center>
+		<ul>
+			<li class="libt"><div class="card" style="width:200px;">
+				<ul><li><img src="img/badqueen.jpg" width="180" height="480"></li>
+				<li><font size="5" color="#eeeeee" style="text-align: center;">站长</font></li>
+			</ul></div></li>
 			
-		</table>
-	</td>
-	<td>
-		
-</div>
-
-<div width=100%>
-	<table width=15%  height=100% bgcolor="#303030" style="border-radius: 50px;text-decoration-color: #00FF00;-color">
-
-
-			<tr><td style="text-align:center;font-size:50px;text-decoration-color: #00FF00;"><center>介绍</center></td></tr>
-			<tr><td><img src="img/zbc.jpg" alt="狗站长的美照" style="border-radius: 5100px;text-align:center;"></td></tr>
-			<tr>
-				<td style="text-align:center;font-size:30px;">ZBC</td>
-			</tr>
-			<tr><td>会画画的机器人<br><br><br><br>他号没了<br><br><br><br></td>
-			</tr>
+			<li class="libt"><div class="card" style="width:200px;">
+				<ul><li><img src="img/zbc.jpg" width="180" height="480"></li>
+				<li><font size="5" color="#eeeeee" style="text-align: center;">画素材的</font></li>
+			</ul></div></li>
+			<li class="libt"><div class="card" style="width:200px;">
+				<ul><li><img src="img/cc.jpg" width="180" height="480"></li>
+				<li><font size="5" color="#eeeeee" style="text-align: center;">“白客”</font></li>
+			</ul></div></li>
+		</ul>
 			
-		</table>
-</div>
-</div>
-
-<br><br><br><br><br><br><br><br><br><br><br><br>
-<div id="Download" style="background-color:#202020">
-	<header ><font size="32">我们的作品</font></header>
-	<hr>
-	<ul>
-		<li>史上最强AI（小玩具）<a href="https://cloud.189.cn/web/share?code=Un6Fruz2MrMb">下载（访问码：yzn8）</a></li>
-	</ul>
-</div>
-
-
-
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-
+	</div></center>
+	
+	
 
 
 
